--- a/src/navbar.css
+++ b/src/navbar.css
@@ -67,10 +67,16 @@
 }
 
 .logo{
+    max-width: 50px;
+    min-width: 50px;
     padding: 2px;
     background-color: transparent;
     border: none;
     cursor : pointer;
+}
+.logoo{
+    height: 100%;
+    width: 100%;
 }
 
 .space{
