--- a/frontend/src/delete.css
+++ b/frontend/src/delete.css
@@ -1,15 +1,21 @@
 .edit-container {
+    background-image: url('./assets/stars.jpg'); 
+  background-size: cover;      
+  background-repeat: no-repeat;
+  background-position: center;
+            
+  margin: 0;
     display: flex;
     flex-direction: column;
     align-items: center;
     width: 50%;
     margin : 20px auto ;
-    background-color: #ffffff;
+    background-color: #ffffff00;
     border: 2px solid hsl(204, 3%, 33%);
     border-radius: 5px;
     height: 100%;
     margin-bottom: 5px ;
-
+    color: aliceblue;
     padding : 8px;
     padding-bottom: 30px;
     position: relative;
@@ -22,7 +28,8 @@
     width: 90%;
     padding: 10px;
     margin : auto auto ;
-    background-color: #ffffff;
+    color : white;
+    background-color: #0000005d;
     border: 0.4px solid hsl(204, 3%, 33%);
     border-radius: 5px;
     
