--- a/frontend/src/edit.css
+++ b/frontend/src/edit.css
@@ -1,10 +1,11 @@
 .edit-container {
+    
     display: flex;
     flex-direction: column;
     align-items: center;
     width: 50%;
     margin : 20px auto ;
-    background-color: #ffffff;
+    background-color: rgba(255, 255, 255, 0);
     border: 2px solid hsl(204, 3%, 33%);
     border-radius: 5px;
     height: 100%;
@@ -22,7 +23,7 @@
     width: 90%;
     padding: 10px;
     margin-bottom: 30px;
-    background-color: #ffffff;
+    background-color: #ffffff00;
     border: 0.4px solid hsl(204, 3%, 33%);
     border-radius: 5px;
     
