--- a/frontend/src/showexpense.css
+++ b/frontend/src/showexpense.css
@@ -1,15 +1,21 @@
 .expensecontainer {
+    background-image: url('./assets/bckgr.png'); 
+    background-size: cover;      
+    background-repeat: no-repeat;
+    background-position: center;
+    min-height: 100vh;          
+    margin: 0;
     display: flex;
     flex-direction: column;
     align-items: center;
     width: 90%;
     margin : 20px auto ;
-    background-color: #ffffff;
+    background-color: transparent;
     border: 2px solid hsl(204, 3%, 33%);
     border-radius: 5px;
     height: 100%;
     margin-bottom: 5px ;
-
+    color: #ffffff;
     padding : 8px;
     padding-bottom: 30px;
     position: relative;
@@ -25,7 +31,7 @@
     justify-content: center;
     width: 90%;
     margin : auto auto ;
-    background-color: #ffffff;
+    background-color: transparent;
     border: 2px solid hsl(204, 3%, 33%);
     border-radius: 5px;
     height: 100%;
@@ -54,6 +60,9 @@
     justify-self: right;
 }
 
+.amount{
+    justify-items: right;
+}
 .expenses {
     display: flex;
     flex-direction: row;
@@ -61,10 +70,12 @@
     justify-content: space-between;
     width: 95%;
     height : 2rem;
-    background-color: #ffffff;
+    color: #ffffff;
+    background-color: transparent;
     border : rgb(189, 189, 189) solid 1px;
     padding: 10px;
     margin: 1px;
+    
     border-radius: 5px;
 }
 .expensename {
@@ -111,7 +122,7 @@
 }
 
 .green{
-    color: green;
+    color: rgb(128, 243, 128);
 }
 .red{
     color: red;
