--- a/frontend/src/searchexpense.css
+++ b/frontend/src/searchexpense.css
@@ -1,9 +1,10 @@
-.expensecontainer{
+.fullcontain{
     background-image: url('./assets/bckgr.png'); 
     background-size: cover;      
     background-repeat: no-repeat;
     background-position: center;
-    min-height: 100vh;  
+    min-height: 100vh;
+    min-width: 100vw;  
 }
 .expenses{
     color:aliceblue;
