--- a/frontend/src/showexpense.css
+++ b/frontend/src/showexpense.css
@@ -1,23 +1,28 @@
+.fullcontain {
+  background-image: url('./assets/bckgr.png');
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  min-height: 100vh;
+  width: 100%;
+  height: auto;          /* allow growth */
+  position: relative;
+  z-index: 0;            /* make sure it’s behind */
+}
 .expensecontainer {
-    background-image: url('./assets/bckgr.png'); 
-    background-size: cover;      
-    background-repeat: no-repeat;
-    background-position: center;
-    min-height: 100vh;          
-    margin: 0;
+    
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 90%;
+    width: 70%;
     margin : 20px auto ;
-    background-color: transparent;
+    background: transparent;
     border: 2px solid hsl(204, 3%, 33%);
     border-radius: 5px;
-    height: 100%;
     margin-bottom: 5px ;
     color: #ffffff;
     padding : 8px;
-    padding-bottom: 30px;
+    padding-bottom: 35px;
     position: relative;
 }
 
@@ -30,18 +35,15 @@
     align-items: center;
     justify-content: center;
     width: 90%;
-    margin : auto auto ;
-    background-color: transparent;
+    
+    background: transparent;
     border: 2px solid hsl(204, 3%, 33%);
     border-radius: 5px;
-    height: 100%;
-    overflow-y: scroll;
-    overflow-x: hidden;
+    
     padding : 8px;
+    padding-bottom: 15px;
     position: relative;
-    overflow-y: scroll;
-  scrollbar-width: none;
-  -ms-overflow-style: none;
+   
 }
 
 
