--- a/frontend/src/delete.css
+++ b/frontend/src/delete.css
@@ -5,15 +5,16 @@
   background-position: center;
   
             
-  margin: 0;
+  
     display: flex;
     flex-direction: column;
     align-items: center;
     width: 50%;
-    margin : 20px auto ;
+    margin : 70px auto ;
     background-color: #ffffff00;
     border: 2px solid hsl(204, 3%, 33%);
     border-radius: 5px;
+    box-shadow: 0 0 20px rgb(252, 252, 252);
     height: 100%;
     margin-bottom: 5px ;
     color: aliceblue;
