--- a/frontend/src/showexpense.css
+++ b/frontend/src/showexpense.css
@@ -81,9 +81,17 @@
     padding: 10px;
     margin: 1px;
     margin-bottom: 5px;
-    
+    transition: all 90ms;
     border-radius: 5px;
 }
+
+
+.expenses:hover{
+    color: black;
+    background-color: rgba(255, 255, 255, 0.67);
+    scale: 1.01;
+}
+
 .expensename {
     font-size: 1 rem;
     margin : 6px;
