--- a/frontend/src/edit.css
+++ b/frontend/src/edit.css
@@ -41,13 +41,42 @@
 
 .button{
     width: 100%;
+    display: flex;
     height: 35px;
     margin-top: 10px;
-    background-color: hsl(204, 3%, 33%);
+    
     color: white;
+    border: none;}
+    .buttons{
+        border-radius: 5px;
+        width: 50%;
+        margin: 2px;
+    }
+.save{
+    width: 100%;
+    background-color: rgb(219, 226, 224);
+    align-items: center;
+    justify-content: center;
+    font-size: medium;
+    height: 35px;
+    margin-top: 10px;
+    border-radius: 5px;
+    color: rgb(0, 0, 0);
     border: none;
-    border-radius: 5px;}
-.button:hover{
-    background-color: hsl(204, 3%, 20%);
+    transition: all 70ms;
+}
+
+.save:hover{
+    scale: 1.02;
+    background-color: rgba(69, 103, 152, 0.699);
+    color: white;
+}
+
+.et:hover{background-color: lightslategrey;}
+.de:hover{
+    background-color: rgb(226, 28, 28);}
+    .buttons:hover{
+    scale: 1.02;
+    
 }
    
