--- a/frontend/src/showexpense.css
+++ b/frontend/src/showexpense.css
@@ -146,6 +146,8 @@
 
 @media (max-width: 600px) {
    
+   .year{font-size: 15px;}
+   .month{font-size: 20px;}
 
     .details{
         width: 100%;
@@ -156,6 +158,7 @@
         justify-items: left;
     }
     .budjet, .savings, .spend {
+        font-size: smaller;
         justify-content: left;
     }
     .date{
